# uniswap-watcher

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml  init.sql
scripts/: init_db.sh
src/: binance_client.rs  controller.rs  db.rs  lib.rs  main.rs  util.rs
tests/: binance_client.rs  db.rs  eth_client.rs  fee.rs
